[gd_scene load_steps=9 format=2]

[ext_resource path="res://bg2.png" type="Texture" id=1]
[ext_resource path="res://GHAttack.tres" type="Theme" id=2]
[ext_resource path="res://bless.png" type="Texture" id=3]
[ext_resource path="res://GHBigFont.tres" type="DynamicFont" id=4]
[ext_resource path="res://BlessWindow.gd" type="Script" id=5]
[ext_resource path="res://GHFlatBox.tres" type="StyleBox" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="BlessWindow" type="PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 14.0
margin_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource( 2 )
custom_styles/panel = ExtResource( 6 )
script = ExtResource( 5 )

[node name="BlessBack" type="TextureRect" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 418.0
margin_bottom = 216.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 2

[node name="BlessContainer" type="VBoxContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 418.0
margin_bottom = 216.0

[node name="BlessText" type="HBoxContainer" parent="BlessContainer"]
margin_right = 414.0
margin_bottom = 104.0
custom_constants/separation = 10

[node name="BlessIcon" type="TextureRect" parent="BlessContainer/BlessText"]
margin_right = 104.0
margin_bottom = 104.0
rect_min_size = Vector2( 104, 104 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 1

[node name="BlessQuestion" type="Label" parent="BlessContainer/BlessText"]
margin_left = 114.0
margin_right = 414.0
margin_bottom = 104.0
custom_fonts/font = ExtResource( 4 )
text = "Add Bless?"

[node name="BlessButtons" type="HBoxContainer" parent="BlessContainer"]
margin_top = 108.0
margin_right = 414.0
margin_bottom = 212.0

[node name="YesButton" type="Button" parent="BlessContainer/BlessButtons"]
margin_right = 205.0
margin_bottom = 104.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
custom_styles/normal = SubResource( 1 )
text = "Yes"

[node name="NoButton" type="Button" parent="BlessContainer/BlessButtons"]
margin_left = 209.0
margin_right = 414.0
margin_bottom = 104.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 4 )
custom_styles/normal = SubResource( 2 )
text = "No"

[connection signal="pressed" from="BlessContainer/BlessButtons/YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="pressed" from="BlessContainer/BlessButtons/NoButton" to="." method="_on_NoButton_pressed"]
